--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html-react-parser": "^3.0.4",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
