--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "clone-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://DevWonny.github.io/CloneCoding_TypeScript",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -27,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
     "msw": "^0.47.3"
   },
   "msw": {
